--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 numpy>=1.9.0
 pyparsing>=2.0.2
-cython>=0.21
+cython>=0.21.1
+numexpr>=2.0.0
+#tables>=3.1.1
+git+git://github.com/PyTables/PyTables
